--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css"
+      rel="stylesheet"
+    /> -->
+
+    <link
+      href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
       rel="stylesheet"
     />
 
