Making sidebar static

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1"
+      type="module"
+    ></script>
+
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css"
       rel="stylesheet"
@@ -25,7 +30,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="overflow-hidden"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
