--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="!font-mono"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
